--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="column volume-slider">
                 <span>Volume</span><input type="range">
             </div>
-            <div class="column keys-chck">
+            <div class="column keys-check">
                 <span> Teclas</span><input type="checkbox" checked>
             </div>
         </header>
